--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "shpat"
 version = "0.1.0"
-authors = ["Sasha <leo.pourcelot@protonmail.com>"]
+authors = ["Sasha"]
 edition = "2018"
+categories = [ "rust-pattern" ]
+description = "sasha's solution to common patterns"
+documentation = "https://docs.rs/shpat"
+readme = "README.md"
+repository = "https://github.com/scileo/shpat"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
